_generated-config/1.7/config/quarkus-oidc-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-general-config-items_configuration]]link:#quarkus-oidc-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-general-config-items_quarkus.oidc.tenant-id]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.tenant-id[quarkus.oidc.tenant-id]`

[.description]
--
A unique tenant identifier. It must be set by `TenantConfigResolver` providers which resolve the tenant configuration dynamically and is optional in all other cases.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.tenant-enabled]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.tenant-enabled[quarkus.oidc.tenant-enabled]`

[.description]
--
If this tenant configuration is enabled.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.application-type]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.application-type[quarkus.oidc.application-type]`

[.description]
--
The application type, which can be one of the following values from enum `ApplicationType`.
--|`web-app`, `service` 
|`service`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.auth-server-url]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.auth-server-url[quarkus.oidc.auth-server-url]`

[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, 'https://host:port/auth'. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: 'https://host:port/auth/realms/++{++realm++}++' where '++{++realm++}++' has to be replaced by the name of the Keycloak realm.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.discovery-enabled]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.discovery-enabled[quarkus.oidc.discovery-enabled]`

[.description]
--
Enables OIDC discovery. If the discovery is disabled then the following properties must be configured: - 'authorization-path' and 'token-path' for the 'web-app' applications - 'jwks-path' or 'introspection-path' for both the 'web-app' and 'service' applications 
 'web-app' applications may also have 'user-info-path' and 'end-session-path' properties configured.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authorization-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authorization-path[quarkus.oidc.authorization-path]`

[.description]
--
Relative path of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token-path[quarkus.oidc.token-path]`

[.description]
--
Relative path of the OIDC token endpoint which issues ID, access and refresh tokens. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.user-info-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.user-info-path[quarkus.oidc.user-info-path]`

[.description]
--
Relative path of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.introspection-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.introspection-path[quarkus.oidc.introspection-path]`

[.description]
--
Relative path of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.jwks-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.jwks-path[quarkus.oidc.jwks-path]`

[.description]
--
Relative path of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.end-session-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.end-session-path[quarkus.oidc.end-session-path]`

[.description]
--
Relative path of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.connection-delay]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.connection-delay[quarkus.oidc.connection-delay]`

[.description]
--
The maximum amount of time the adapter will try connecting to the currently unavailable OIDC server for. For example, setting it to '20S' will let the adapter keep requesting the connection for up to 20 seconds.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.public-key]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.public-key[quarkus.oidc.public-key]`

[.description]
--
Public key for the local JWT token verification. OIDC server connection will not be created when this property is set.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.client-id]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.client-id[quarkus.oidc.client-id]`

[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.roles.role-claim-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.roles.role-claim-path[quarkus.oidc.roles.role-claim-path]`

[.description]
--
Path to the claim containing an array of groups. It starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: "realm/groups". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in a different claim.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.roles.role-claim-separator]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.roles.role-claim-separator[quarkus.oidc.roles.role-claim-separator]`

[.description]
--
Separator for splitting a string which may contain multiple group values. It will only be used if the "role-claim-path" property points to a custom claim whose value is a string. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.roles.source]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.roles.source[quarkus.oidc.roles.source]`

[.description]
--
Source of the principal roles.
--|`idtoken`, `accesstoken`, `userinfo` 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.issuer]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.issuer[quarkus.oidc.token.issuer]`

[.description]
--
Expected issuer 'iss' claim value.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.audience]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.audience[quarkus.oidc.token.audience]`

[.description]
--
Expected audience 'aud' claim value which may be a string or an array of strings.
--|list of string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.token-type]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.token-type[quarkus.oidc.token.token-type]`

[.description]
--
Expected token type
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.lifespan-grace]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.lifespan-grace[quarkus.oidc.token.lifespan-grace]`

[.description]
--
Life span grace period in seconds. When checking token expiry, current time is allowed to be later than token expiration time by at most the configured number of seconds. When checking token issuance, current time is allowed to be sooner than token issue time by at most the configured number of seconds.
--|int 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.principal-claim]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.principal-claim[quarkus.oidc.token.principal-claim]`

[.description]
--
Name of the claim which contains a principal name. By default, the 'upn', 'preferred_username' and `sub` claims are checked.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.refresh-expired]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.refresh-expired[quarkus.oidc.token.refresh-expired]`

[.description]
--
Refresh expired ID tokens. If this property is enabled then a refresh token request will be performed if the ID token has expired and, if successful, the local session will be updated with the new set of tokens. Otherwise, the local session will be invalidated and the user redirected to the OpenID Provider to re-authenticate. In this case the user may not be challenged again if the OIDC provider session is still active. For this option be effective the `authentication.session-age-extension` property should also be set to a non-zero value since the refresh token is currently kept in the user session. This option is valid only when the application is of type `ApplicationType++#++WEB_APP`++}++.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.token.forced-jwk-refresh-interval]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.token.forced-jwk-refresh-interval[quarkus.oidc.token.forced-jwk-refresh-interval]`

[.description]
--
Forced JWK set refresh interval in minutes.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.credentials.secret]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.credentials.secret[quarkus.oidc.credentials.secret]`

[.description]
--
Client secret which is used for a 'client_secret_basic' authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.credentials.client-secret.value]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.credentials.client-secret.value[quarkus.oidc.credentials.client-secret.value]`

[.description]
--
The client secret
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.credentials.client-secret.method]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.credentials.client-secret.method[quarkus.oidc.credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post` 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.credentials.jwt.secret]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.credentials.jwt.secret[quarkus.oidc.credentials.jwt.secret]`

[.description]
--
client_secret_jwt: JWT which includes client id as one of its claims is signed by the client secret and is submitted as a 'client_assertion' form parameter, while 'client_assertion_type' parameter is set to "urn:ietf:params:oauth:client-assertion-type:jwt-bearer".
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.credentials.jwt.lifespan]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.credentials.jwt.lifespan[quarkus.oidc.credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.proxy.host]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.proxy.host[quarkus.oidc.proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.proxy.port]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.proxy.port[quarkus.oidc.proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.proxy.username]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.proxy.username[quarkus.oidc.proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.proxy.password]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.proxy.password[quarkus.oidc.proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.redirect-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.redirect-path[quarkus.oidc.authentication.redirect-path]`

[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.restore-path-after-redirect[quarkus.oidc.authentication.restore-path-after-redirect]`

[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.remove-redirect-parameters[quarkus.oidc.authentication.remove-redirect-parameters]`

[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.verify-access-token]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.verify-access-token[quarkus.oidc.authentication.verify-access-token]`

[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.force-redirect-https-scheme[quarkus.oidc.authentication.force-redirect-https-scheme]`

[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.scopes]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.scopes[quarkus.oidc.authentication.scopes]`

[.description]
--
List of scopes
--|list of string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.cookie-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.cookie-path[quarkus.oidc.authentication.cookie-path]`

[.description]
--
Cookie path parameter value which, if set, will be used for the session and state cookies. It may need to be set when the redirect path has a root different to that of the original request URL.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.user-info-required]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.user-info-required[quarkus.oidc.authentication.user-info-required]`

[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.session-age-extension]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.session-age-extension[quarkus.oidc.authentication.session-age-extension]`

[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.xhr-auto-redirect]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.xhr-auto-redirect[quarkus.oidc.authentication.xhr-auto-redirect]`

[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via XMLHttpRequest and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since XMLHttpRequest automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.tls.verification]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.tls.verification[quarkus.oidc.tls.verification]`

[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.
--|`required`, `none` 
|`required`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.logout.path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.logout.path[quarkus.oidc.logout.path]`

[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.logout.post-logout-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.logout.post-logout-path[quarkus.oidc.logout.post-logout-path]`

[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.authentication.extra-params-extra-params]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.authentication.extra-params-extra-params[quarkus.oidc.authentication.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


h|[[quarkus-oidc-general-config-items_quarkus.oidc.named-tenants]]link:#quarkus-oidc-general-config-items_quarkus.oidc.named-tenants[Additional named tenants]

h|Type
h|Default

a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tenant-id]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tenant-id[quarkus.oidc."tenant".tenant-id]`

[.description]
--
A unique tenant identifier. It must be set by `TenantConfigResolver` providers which resolve the tenant configuration dynamically and is optional in all other cases.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tenant-enabled]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tenant-enabled[quarkus.oidc."tenant".tenant-enabled]`

[.description]
--
If this tenant configuration is enabled.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.application-type]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.application-type[quarkus.oidc."tenant".application-type]`

[.description]
--
The application type, which can be one of the following values from enum `ApplicationType`.
--|`web-app`, `service` 
|`service`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.auth-server-url]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.auth-server-url[quarkus.oidc."tenant".auth-server-url]`

[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, 'https://host:port/auth'. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: 'https://host:port/auth/realms/++{++realm++}++' where '++{++realm++}++' has to be replaced by the name of the Keycloak realm.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.discovery-enabled]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.discovery-enabled[quarkus.oidc."tenant".discovery-enabled]`

[.description]
--
Enables OIDC discovery. If the discovery is disabled then the following properties must be configured: - 'authorization-path' and 'token-path' for the 'web-app' applications - 'jwks-path' or 'introspection-path' for both the 'web-app' and 'service' applications 
 'web-app' applications may also have 'user-info-path' and 'end-session-path' properties configured.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authorization-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authorization-path[quarkus.oidc."tenant".authorization-path]`

[.description]
--
Relative path of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token-path[quarkus.oidc."tenant".token-path]`

[.description]
--
Relative path of the OIDC token endpoint which issues ID, access and refresh tokens. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.user-info-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.user-info-path[quarkus.oidc."tenant".user-info-path]`

[.description]
--
Relative path of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.introspection-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.introspection-path[quarkus.oidc."tenant".introspection-path]`

[.description]
--
Relative path of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.jwks-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.jwks-path[quarkus.oidc."tenant".jwks-path]`

[.description]
--
Relative path of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.end-session-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.end-session-path[quarkus.oidc."tenant".end-session-path]`

[.description]
--
Relative path of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.connection-delay]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.connection-delay[quarkus.oidc."tenant".connection-delay]`

[.description]
--
The maximum amount of time the adapter will try connecting to the currently unavailable OIDC server for. For example, setting it to '20S' will let the adapter keep requesting the connection for up to 20 seconds.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.public-key]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.public-key[quarkus.oidc."tenant".public-key]`

[.description]
--
Public key for the local JWT token verification. OIDC server connection will not be created when this property is set.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.client-id]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.client-id[quarkus.oidc."tenant".client-id]`

[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.role-claim-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.role-claim-path[quarkus.oidc."tenant".roles.role-claim-path]`

[.description]
--
Path to the claim containing an array of groups. It starts from the top level JWT JSON object and can contain multiple segments where each segment represents a JSON object name only, example: "realm/groups". Use double quotes with the namespace qualified claim names. This property can be used if a token has no 'groups' claim but has the groups set in a different claim.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.role-claim-separator]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.role-claim-separator[quarkus.oidc."tenant".roles.role-claim-separator]`

[.description]
--
Separator for splitting a string which may contain multiple group values. It will only be used if the "role-claim-path" property points to a custom claim whose value is a string. A single space will be used by default because the standard 'scope' claim may contain a space separated sequence.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.source]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.roles.source[quarkus.oidc."tenant".roles.source]`

[.description]
--
Source of the principal roles.
--|`idtoken`, `accesstoken`, `userinfo` 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.issuer]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.issuer[quarkus.oidc."tenant".token.issuer]`

[.description]
--
Expected issuer 'iss' claim value.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.audience]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.audience[quarkus.oidc."tenant".token.audience]`

[.description]
--
Expected audience 'aud' claim value which may be a string or an array of strings.
--|list of string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.token-type]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.token-type[quarkus.oidc."tenant".token.token-type]`

[.description]
--
Expected token type
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.lifespan-grace]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.lifespan-grace[quarkus.oidc."tenant".token.lifespan-grace]`

[.description]
--
Life span grace period in seconds. When checking token expiry, current time is allowed to be later than token expiration time by at most the configured number of seconds. When checking token issuance, current time is allowed to be sooner than token issue time by at most the configured number of seconds.
--|int 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.principal-claim]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.principal-claim[quarkus.oidc."tenant".token.principal-claim]`

[.description]
--
Name of the claim which contains a principal name. By default, the 'upn', 'preferred_username' and `sub` claims are checked.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.refresh-expired]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.refresh-expired[quarkus.oidc."tenant".token.refresh-expired]`

[.description]
--
Refresh expired ID tokens. If this property is enabled then a refresh token request will be performed if the ID token has expired and, if successful, the local session will be updated with the new set of tokens. Otherwise, the local session will be invalidated and the user redirected to the OpenID Provider to re-authenticate. In this case the user may not be challenged again if the OIDC provider session is still active. For this option be effective the `authentication.session-age-extension` property should also be set to a non-zero value since the refresh token is currently kept in the user session. This option is valid only when the application is of type `ApplicationType++#++WEB_APP`++}++.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.forced-jwk-refresh-interval]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.token.forced-jwk-refresh-interval[quarkus.oidc."tenant".token.forced-jwk-refresh-interval]`

[.description]
--
Forced JWK set refresh interval in minutes.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.secret]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.secret[quarkus.oidc."tenant".credentials.secret]`

[.description]
--
Client secret which is used for a 'client_secret_basic' authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.client-secret.value]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.client-secret.value[quarkus.oidc."tenant".credentials.client-secret.value]`

[.description]
--
The client secret
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.client-secret.method]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.client-secret.method[quarkus.oidc."tenant".credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post` 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.jwt.secret]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.jwt.secret[quarkus.oidc."tenant".credentials.jwt.secret]`

[.description]
--
client_secret_jwt: JWT which includes client id as one of its claims is signed by the client secret and is submitted as a 'client_assertion' form parameter, while 'client_assertion_type' parameter is set to "urn:ietf:params:oauth:client-assertion-type:jwt-bearer".
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.jwt.lifespan]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.credentials.jwt.lifespan[quarkus.oidc."tenant".credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.host]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.host[quarkus.oidc."tenant".proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.port]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.port[quarkus.oidc."tenant".proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.username]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.username[quarkus.oidc."tenant".proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.password]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.proxy.password[quarkus.oidc."tenant".proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.redirect-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.redirect-path[quarkus.oidc."tenant".authentication.redirect-path]`

[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect[quarkus.oidc."tenant".authentication.restore-path-after-redirect]`

[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters[quarkus.oidc."tenant".authentication.remove-redirect-parameters]`

[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.verify-access-token]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.verify-access-token[quarkus.oidc."tenant".authentication.verify-access-token]`

[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme[quarkus.oidc."tenant".authentication.force-redirect-https-scheme]`

[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.scopes]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.scopes[quarkus.oidc."tenant".authentication.scopes]`

[.description]
--
List of scopes
--|list of string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.extra-params-extra-params]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.extra-params-extra-params[quarkus.oidc."tenant".authentication.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.cookie-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.cookie-path[quarkus.oidc."tenant".authentication.cookie-path]`

[.description]
--
Cookie path parameter value which, if set, will be used for the session and state cookies. It may need to be set when the redirect path has a root different to that of the original request URL.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.user-info-required]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.user-info-required[quarkus.oidc."tenant".authentication.user-info-required]`

[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called
--|boolean 
|`false`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.session-age-extension]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.session-age-extension[quarkus.oidc."tenant".authentication.session-age-extension]`

[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.xhr-auto-redirect]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.authentication.xhr-auto-redirect[quarkus.oidc."tenant".authentication.xhr-auto-redirect]`

[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via XMLHttpRequest and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since XMLHttpRequest automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually
--|boolean 
|`true`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tls.verification]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.tls.verification[quarkus.oidc."tenant".tls.verification]`

[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.
--|`required`, `none` 
|`required`


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.logout.path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.logout.path[quarkus.oidc."tenant".logout.path]`

[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.
--|string 
|


a| [[quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.logout.post-logout-path]]`link:#quarkus-oidc-general-config-items_quarkus.oidc.-tenant-.logout.post-logout-path[quarkus.oidc."tenant".logout.post-logout-path]`

[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
